--- a/team/iremtopsakal/index.html
+++ b/team/iremtopsakal/index.html
@@ -93,11 +93,10 @@
           font-size: 1.1rem;
         }
         
-        /* UPDATED: General list styling for Research Area */
         .info-block ul.research-list {
           padding-left: 20px;
           margin: 0;
-          color: var(--ink); /* This now sets the research text to black */
+          color: #000000; /* UPDATED: Set to pure black as requested */
         }
 
         .info-block ul.research-list li {
@@ -123,7 +122,7 @@
         }
         .education-list .degree {
           display: block;
-          font-weight: normal; /* UPDATED: Changed from 600 to normal */
+          font-weight: normal;
           color: var(--ink);
         }
         .education-list .university {
