--- a/publications/index.html
+++ b/publications/index.html
@@ -34,8 +34,9 @@
     /* --- Filter Controls --- */
     .filter-controls {
       display: flex;
-      justify-content: flex-end; /* Aligns to the right */
-      gap: 15px;
+      justify-content: center; /* UPDATED: Aligns to the center */
+      align-items: center; /* Vertically aligns the label and dropdown */
+      gap: 10px;
       margin-bottom: 40px;
       padding-bottom: 20px;
       border-bottom: 1px solid var(--border-color);
@@ -61,7 +62,7 @@
       gap: 1.2em;
       padding-bottom: 20px;
       margin-bottom: 20px;
-      border-bottom: 1px solid #f0f0f0;
+      /* UPDATED: Removed the border-bottom line */
     }
     
     .publication-item::before {
@@ -314,4 +315,4 @@
   </script>
 
 </body>
-</html>
+</html>s
